<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_account_box_black_24dp"
        android:ems="10"
        android:hint="@string/edittexthint"
        android:inputType="textPersonName"
        android:lines="1"
        android:maxLength="25"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/edittextparola"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="25"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_account_box_black_24dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:maxLength="40"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_account_box_black_24dp"
        android:ems="10"
        android:hint="@string/telefon"
        android:inputType="phone"
        android:lines="1"
        android:maxLength="11"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/adres"
        android:inputType="textMultiLine"
        android:lines="2"
        android:maxLength="80"
        android:gravity="start"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_account_box_black_24dp"
        android:ems="10"
        android:hint="@string/tarih"
        android:inputType="date"
        android:lines="1"
        android:maxLength="15"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary" />

    <Button
        android:id="@+id/uyeolkaydetbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:background="@drawable/button_background"
        android:text="@string/uyeolsayfasikaydetbtn"
        android:textColor="@color/btntextcolor"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/uyeolgirisyapbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background"
        android:text="@string/uyeolsayfasigirisyapbtn"
        android:textColor="@color/btntextcolor"
        android:textStyle="bold" />
</LinearLayout>