<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/edittextparola"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="25"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText9" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_account_box_black_24dp"
        android:ems="10"
        android:hint="@string/edittexthint"
        android:inputType="textPersonName"
        android:lines="1"
        android:maxLength="25"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/girisbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/button_background"
        android:text="@string/girisbtn"
        android:textColor="@color/btntextcolor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editText3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editText3"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        tools:text="@string/girisbtn" />

    <Button
        android:id="@+id/uyeolbtn"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_background"
        android:text="@string/uyeolbtn"
        android:textColor="@color/btntextcolor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/girisbtn"
        app:layout_constraintStart_toStartOf="@+id/girisbtn"
        app:layout_constraintTop_toBottomOf="@+id/girisbtn"
        tools:text="@string/uyeolbtn" />
</androidx.constraintlayout.widget.ConstraintLayout>